UUID for user created data